--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-rnd": "^10.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "signalhub": "^4.9.0",
+    "webrtc-swarm": "^2.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
